--- a/package.json
+++ b/package.json
@@ -14,17 +14,22 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^6.2.3",
+    "babel-plugin-inline-dotenv": "^1.7.0",
     "date-fns": "^2.29.2",
     "expo": "~46.0.7",
     "expo-app-loading": "~2.1.0",
+    "expo-apple-authentication": "~4.3.0",
+    "expo-auth-session": "~3.7.1",
     "expo-font": "~10.2.0",
+    "expo-random": "~12.3.0",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "intl": "^1.2.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.34.2",
-    "react-native": "0.69.4",
+    "react-native": "0.69.5",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
